# tasks

./: .gitignore
.github/workflows/: api.yml
services/tasks_api/: README.md  main.py  pyproject.toml  serverless.yml
